NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/NATT_BluEdge_Terms__c.object-meta.xml
<CustomObject>
    <label>BluEdge Term</label>
    <nameField>
        <label>BluEdge Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BluEdge Terms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>