NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/Best_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Best_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record is applicable for BluEdge Core Best Bundle</description>
    <label>Best Bundle</label>
    <type>Checkbox</type>
</CustomField>