NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/Better_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Better_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record is applicable for BluEdge Core Better Bundle</description>
    <label>Better Bundle</label>
    <type>Checkbox</type>
</CustomField>