NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/CTBR_Deductible__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Deductible__c</fullName>
    <label>CTBR Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Deductible</valueSetName>
    </valueSet>
</CustomField>