NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/CTBR_Hours__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Hours__c</fullName>
    <label>CTBR Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Hours</valueSetName>
    </valueSet>
</CustomField>