NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/CTBR_Months__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Months__c</fullName>
    <label>CTBR Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>