NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/CTBR_Price__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Price__c</fullName>
    <formula>NATT_Price__c * $CustomMetadata.CTBR_Exchange_Rate__mdt.CTBR_BlueEdge.Previous_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>