NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/Good_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Good_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record is applicable for BluEdge Core Good Bundle</description>
    <label>Good Bundle</label>
    <type>Checkbox</type>
</CustomField>