NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Active__c.field-meta.xml
<CustomField>
    <fullName>NATT_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>