NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_BluEdge_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Price_Type__c</fullName>
    <label>BluEdge Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Price_Type</valueSetName>
    </valueSet>
</CustomField>