NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>NATT_CaseSafeId__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>CaseSafeId</label>
    <type>Text</type>
</CustomField>