NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Component_Name__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>