NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Deductible__c.field-meta.xml
<CustomField>
    <fullName>NATT_Deductible__c</fullName>
    <label>Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Deductible</valueSetName>
    </valueSet>
</CustomField>