NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Date__c</fullName>
    <description>The end date for the price. this in inclusive</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>