NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Months_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Months_Hours__c</fullName>
    <formula>IF(OR(TEXT(NATT_BluEdge_Price_Type__c)=&quot;Extended Basic&quot;,TEXT(NATT_BluEdge_Price_Type__c)=&quot;Optional Coverage&quot;),
TEXT(NATT_BluEdge_Price_Type__c) &amp; &quot; &quot; &amp; TEXT( NATT_Months__c )&amp;&quot; Months / &quot; &amp; TEXT(NATT_Hours__c)&amp; &quot; Hours&quot;,

IF(TEXT(NATT_BluEdge_Price_Type__c)=&quot;Major Component&quot;,
TEXT(NATT_BluEdge_Price_Type__c) &amp; &quot; &quot; &amp; TEXT( NATT_Months__c )&amp;&quot; Months / &quot; &amp; TEXT(NATT_Hours__c)&amp; &quot; Hours / &quot; &amp; TEXT(NATT_Deductible__c)&amp;&quot; Deductible&quot;,

&quot;N/A&quot;))</formula>
    <label>Months/Hours</label>
    <type>Text</type>
</CustomField>