NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Quick_Set_BluEdge_Core_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quick_Set_BluEdge_Core_Terms__c</fullName>
    <label>Quick Set BluEdge Core Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_All_BluEdge_Terms</valueSetName>
    </valueSet>
</CustomField>