NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Start_Date__c</fullName>
    <description>The start date for the price</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>