NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/fields/NATT_Unit_Tavant_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Tavant_Id__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(NATT_Unit__c))),TEXT(NATT_Unit__c) &amp; &quot;-&quot; &amp; NATT_Tavant_ID__c, TEXT(CTBR_BluEdge_Unit__c) &amp; &quot;-&quot; &amp; NATT_Tavant_ID__c)</formula>
    <label>Unit-Tavant Id</label>
    <type>Text</type>
</CustomField>