NATTQA-ENV/force-app/main/default/objects/NATT_BluEdge_Terms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NATT_Component_Name__c</columns>
    <columns>NATT_Unit__c</columns>
    <columns>NATT_BluEdge_Price_Type__c</columns>
    <columns>NATT_Months__c</columns>
    <columns>NATT_Hours__c</columns>
    <columns>NATT_Price__c</columns>
    <columns>NATT_Tavant_ID__c</columns>
    <columns>NATT_Months_Hours__c</columns>
    <columns>NATT_Deductible__c</columns>
    <columns>NATT_Unit_Tavant_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>